--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <div class="color-palette" id="color-palette">
         </div>
         <div id="modal">Color copied to the clipboard!</div>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
